<resources>
    <!-- GLOBAL -->
    <string name="app_name">CineWorld Digital</string>
    <string name="cinema_name">CineWorld</string>
    <string name="dolby_desc">Dolby Surround 7.1</string>
    <string name="projector_desc">4K Digital Projection</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Movies</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_search_movie">Search Movie</string>
    <string name="nav_search_buy_tickets">Buy Tickets</string>
    <string name="nav_find_us">Find Us</string>
    <string name="nav_logout">Logout</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="google_web_client_id">507431277811-ebjcuptnj4rnbdo2cqs45vinctocp6m0.apps.googleusercontent.com</string>

    <!-- Main Activity -->
    <string name="text_subhead_main">Get the Best Theatrical Experience</string>
    <string name="text_copyright_main">Powered By EclipseLK</string>
    <string name="text_fname_main">First Name</string>
    <string name="text_lname_main">Last Name</string>
    <string name="text_mobile_main">Mobile</string>
    <string name="text_password_main">Password</string>
    <string name="text_login_main">Login</string>
    <string name="text_register_main">Register</string>
    <string name="text_login_redirector_main">Already have an account? Login now!</string>
    <string name="text_register_redirector_main">Don\'t have an account? Register now!</string>

    <!-- Home Activity -->
    <string name="now_showing">Now showing at CineWorld&#8230;</string>
    <string name="coming_soon">Coming soon on CineWorld screens&#8230;</string>
    <string name="movie_name">Movie Name</string>
    <string name="running_time">Running Time</string>
    <string name="movie_language">Language</string>
    <string name="release_date">Release on dd/mm/yy</string>

    <!-- Search Activity -->
    <string name="edittext_search">Search Here&#8230;</string>
    <string name="edittext_showtime">Select Show Time</string>
    <string name="edittext_date">Select Date</string>
    <string name="text_search_result">Search Result:</string>
    <string name="search_results">0</string>

    <!-- Single Movie Activity -->
    <string name="released_on">Released On:</string>
    <string name="book_now">Book My Seat</string>

    <!-- Checkout Activity -->
    <string name="text_pick_movie">Pick a movie&#8230;</string>
    <string name="text_pick_seat">Pick a Seat&#8230;</string>
    <string name="text_confirm_seat">Confirm your seat&#8230;</string>
    <string name="text_select_date">Select a Date</string>
    <string name="text_select_movie">Select a Movie</string>
    <string name="text_select_showtime">Select a Show Time</string>
    <string name="text_today">Today</string>
    <string name="text_screen">Screen</string>
    <string name="option_available">Available</string>
    <string name="option_reserved">Reserved</string>
    <string name="option_selected">Selected</string>
    <string name="movie_details">Movie Details</string>
    <string name="user_details">Your Details</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="show_time">Show Time</string>
    <string name="ticket_count">Num of Tickets</string>
    <string name="seats">Seats</string>
    <string name="sub_total">Sub-total</string>
    <string name="total">Total</string>
    <string name="aggr_text_1">I know that tickets once sold are not exchangeable, transferred nor refundable.</string>
    <string name="aggr_text_2">I have read and agree to the app terms and conditions.</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_card_payment">Card Payment</string>
    <string name="morning_show">10.30AM</string>
    <string name="noontime_show">1.15PM</string>
    <string name="evening_show">4PAM</string>
    <string name="night_show">7PM</string>
    <string name="midnight_show">11PM</string>

    <!-- Settings Activity -->
    <string name="title_user_info">User Information</string>
    <string name="title_card_info">Card Details</string>
    <string name="title_authentication">User Authentication</string>
    <string name="subtitle_fname">First Name</string>
    <string name="subtitle_lname">Last Name</string>
    <string name="subtitle_mobile">Mobile</string>
    <string name="subtitle_email">Email</string>
    <string name="subtitle_change_credentials">Change User Info</string>
    <string name="subtitle_save_card">Save Card Details</string>
    <string name="subtitle_view_card">View Card Details</string>
    <string name="subtitle_use_fingerprint">Use FingerPrint Authentication</string>
    <string name="subtitle_change_password">Change Password</string>
    <string name="subtitle_current_password">Current Password</string>
    <string name="subtitle_new_password">New Password</string>
    <string name="button_save">Save</string>

    <!-- Find Us Activity -->
    <string name="theatre_name">Cine World Theatre</string>
    <string name="theatre_contact">Contact</string>
    <string name="theatre_email">Email</string>
    <string name="theatre_address">Address</string>

    <!-- Payment Activity -->
    <string name="card_details">Enter Card Details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="cvv_code">CVV</string>
    <string name="expire_date">Expire Date</string>
    <string name="slash">/</string>
    <string name="save_card">Save My Card Details</string>
    <string name="get_card">Use Saved Card</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_verified">Your Payment is Verified</string>
    <string name="ticket_printing_warning">You cannot get tickets once you leave this page. Download Now!</string>
    <string name="print_invoice">Download Ticket</string>
    <string name="ticket_seat_no">Seat No</string>
    <string name="ticket_date">Date</string>
    <string name="ticket_showtime">Showtime</string>
    <string name="ticket_total">Total Rs.</string>
    <string name="ticket_issued_datetime">Issued Date &amp; Time</string>
    <string name="ticket_ref_no">Ref No</string>
    <string name="ticket_rule_1">No Outside Food/Beverage</string>
    <string name="ticket_rule_2">No Refund/Exchange</string>
    <string name="ticket_rule_3">Valid only for the issued cinema</string>
    <string name="ticket_rule_4">Ticket price includes government taxes</string>
    <string name="ticket_compliment">Thank you! Enjoy your show!</string>

</resources>