<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/khand"
        android:text="@string/movie_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_seat_no"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView102"
        app:layout_constraintTop_toBottomOf="@+id/textView102" />

    <TextView
        android:id="@+id/textView104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView102"
        app:layout_constraintStart_toStartOf="@+id/textView102"
        app:layout_constraintTop_toBottomOf="@+id/textView102" />

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_showtime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView102"
        app:layout_constraintTop_toBottomOf="@+id/textView102" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="J12"
        android:textAlignment="center"
        android:textColor="@color/primary_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView103"
        app:layout_constraintStart_toStartOf="@+id/textView103"
        app:layout_constraintTop_toBottomOf="@+id/textView103" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="SAT 16, DEC 2023"
        android:textColor="@color/primary_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView102"
        app:layout_constraintStart_toStartOf="@+id/textView102"
        app:layout_constraintTop_toBottomOf="@+id/textView104" />

    <TextView
        android:id="@+id/textView109"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="10.30AM"
        android:textAlignment="center"
        android:textColor="@color/primary_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView105"
        app:layout_constraintStart_toStartOf="@+id/textView105"
        app:layout_constraintTop_toBottomOf="@+id/textView105" />

    <TextView
        android:id="@+id/textView110"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/ticket_total"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/textView111"
        app:layout_constraintEnd_toStartOf="@+id/textView111"
        app:layout_constraintStart_toStartOf="@+id/textView106"
        app:layout_constraintTop_toTopOf="@+id/textView111" />

    <TextView
        android:id="@+id/textView111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/khand"
        android:text="1200LKR"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView109"
        app:layout_constraintTop_toBottomOf="@+id/textView109" />

    <TextView
        android:id="@+id/textView112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_issued_datetime"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView110"
        app:layout_constraintTop_toBottomOf="@+id/textView111" />

    <TextView
        android:id="@+id/textView113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/khand"
        android:text="2023-12-14"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView112"
        app:layout_constraintTop_toTopOf="@+id/textView112" />

    <TextView
        android:id="@+id/textView114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_ref_no"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView112"
        app:layout_constraintTop_toBottomOf="@+id/textView112" />

    <TextView
        android:id="@+id/textView115"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="a8shfkas93hjda4r"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView113"
        app:layout_constraintTop_toBottomOf="@+id/textView113" />

    <TextView
        android:id="@+id/textView116"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_rule_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView111"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView114"
        app:layout_constraintTop_toBottomOf="@+id/textView114" />

    <TextView
        android:id="@+id/textView117"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_rule_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView111"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView114"
        app:layout_constraintTop_toBottomOf="@+id/textView116" />

    <TextView
        android:id="@+id/textView118"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_rule_3"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView111"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView114"
        app:layout_constraintTop_toBottomOf="@+id/textView117" />

    <TextView
        android:id="@+id/textView119"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_rule_4"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView111"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView114"
        app:layout_constraintTop_toBottomOf="@+id/textView118" />

    <TextView
        android:id="@+id/textView120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/khand"
        android:text="@string/ticket_compliment"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView119"
        app:layout_constraintStart_toStartOf="@+id/textView119"
        app:layout_constraintTop_toBottomOf="@+id/textView119" />

</androidx.constraintlayout.widget.ConstraintLayout>