<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical"
    tools:context=".fragment.PayNow">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView92"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand"
                android:text="@string/card_details"
                android:textColor="@color/primary_foreground"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="144dp"
                android:layout_height="30dp"
                android:fontFamily="@font/khand"
                android:text="@string/get_card"
                android:textColor="@color/primary_theme"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView93"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand"
                android:text="@string/name_on_card"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/khand"
                android:inputType="text"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView95"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand"
                android:text="@string/card_number"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/khand"
                android:inputType="text"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView94"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand"
                android:text="@string/cvv_code"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/khand"
                android:hint="X X X"
                android:inputType="text"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand"
                android:text="@string/expire_date"
                android:textColor="@color/primary_foreground"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextText9"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/khand"
                    android:hint="MM"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/primary_foreground"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView97"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/khand"
                    android:text="@string/slash"
                    android:textColor="@color/primary_foreground"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextText9"
                    app:layout_constraintStart_toEndOf="@+id/editTextText9"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextText10"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/khand"
                    android:hint="YY"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/primary_foreground"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textView97"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/khand"
                android:text="@string/save_card"
                android:textColor="@color/primary_foreground"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_theme"
                android:fontFamily="@font/khand"
                android:text="@string/pay_now"
                android:textColor="@color/primary_foreground"
                android:textSize="20sp"
                app:cornerRadius="6dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>